@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-08T01:47:29Z",
-  "count_outdated" : 705,
-  "uniques_outdated" : 261,
+  "timestamp" : "2022-09-11T08:19:42Z",
+  "count_outdated" : 708,
+  "uniques_outdated" : 262,
   "count" : 721,
   "uniques" : 271,
   "views" : [
-    {
-      "timestamp": "2022-08-28T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-30T00:00:00Z",
       "count": 2,
