@@ -1,12 +1,7 @@
 {
-  "count": 16,
-  "uniques": 10,
+  "count": 13,
+  "uniques": 9,
   "views": [
-    {
-      "timestamp": "2022-08-28T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-30T00:00:00Z",
       "count": 2,
