@@ -1,3 +1,11 @@
+2022-09-11T08:19:42Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3031099603
+* notice: last 14d: unq all: 9 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 261 705 / 271 721
+* notice: next accum: outdated-unq outdated-all / unq all: 262 708 / 271 721
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-28] / []
+
 2022-09-08T01:47:29Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3011927672
 * notice: last 14d: unq all: 10 16
